<resources>
    <string name="app_name">Influx</string>


    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_out">Log out</string>
    <string name="register">Register</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="company">Company</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="login_now">Already have an account? Log in!</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Influx</string>
    <string name="nav_header_subtitle">email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="amount_of_resources">Amount of resources: </string>
    <string name="no_recommendations">No recommendations available</string>
    <string name="sales">Sales</string>
    <string name="resource">Resource</string>
</resources>
