<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" />
    <group
        android:checkableBehavior="single"
        android:menuCategory="container">
        <item
            android:id="@+id/nav_company"
            android:icon="@drawable/ic_domain_24dp"
            android:title="@string/company" />
        <item
            android:id="@+id/nav_resource"
            android:icon="@drawable/ic_business_center_black_24dp"
            android:title="@string/resource" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/sales" />
    </group>

    <group
        android:checkableBehavior="single"
        android:menuCategory="system">
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/log_out" />
    </group>

</menu>
